# ratelimitex

./: .gitignore  __init__.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
rate_limiter/: __init__.py  client.py  core.py  decorators.py  exceptions.py  models.py  utils.py
ratelimitex/: __init__.py  core.py  utils.py
tests/: conftest.py  test_client.py  test_core.py  test_decorators.py  test_models.py  test_utils.py
