[tool.poetry]
name = "rate_limiter"
version = "0.1.0"
description = "Enhanced rate limiter with multiple strategies and monitoring capabilities"
authors = ["Nexrion Team"]
readme = "README.md"
packages = [{include = "rate_limiter", from = "."}]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/yourusername/trade_weave"
"Bug Tracker" = "https://github.com/yourusername/trade_weave/issues"
